--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <p>I have been a fisherman and a truck driver amongst other things.</p>
         <p><b>Goals</b></p>
         <p>I want to be making a good living doing cool things in tech as well as contagiously spreading positivity in whatever community I am a part of.</p>
-
-    </main>
+        
+        <p><strong>This image is a screenshot of the Lighthouse report of my page for my assignment.</strong></p>
+        <img src="Class-02/Lighthouse.png" alt="Screenshot for Lighthouse">
+      </main>
     
 </body>
 </html>
