--- a/index.html
+++ b/index.html
@@ -3,23 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class 2</title>
+    <title>conProject</title>
     <script src="node.js"></script>
 </head>
 <body>
     <main>
         <p><header><h1>About Me</h1></header></p>
-        <p><b>Basic Biography</b></p>
+        <p><h2>Biography</h2></p>
         <p>I was born in the state of Washington. I've traveled a little of the world.</p>
         <p><b>Education</b></p>
-        <p>I went to Pierce College and got myself an Associate of Arts and then a Class A CDL through Commercial Driver School.</p>
-        <p><b>Jobs</b></p>
-        <p>I have been a fisherman and a truck driver amongst other things.</p>
+        <p><ul>
+            <li>Pierce College - Associate of Arts</li>
+            <li>Commercial Driver School - Class A CDL</li>
+        </ul></p>
+        <p><b>Work Experience</b></p>
+        <p><ul>
+            <li>Bering Sea Fisherman</li>
+            <li>Truck Driver</li>
+            <li>Pizza Delivery Driver</li>
+        </ul></p>
         <p><b>Goals</b></p>
         <p>I want to be making a good living doing cool things in tech as well as contagiously spreading positivity in whatever community I am a part of.</p>
         
-        <p><strong>This image is a screenshot of the Lighthouse report of my page for my assignment.</strong></p>
-        <img src="Class-02/Lighthouse.png" alt="Screenshot for Lighthouse">
+        <p><h3>Top Ten Movies</h3></p>
+        <ol>
+            <li>The Diary Of Benjamin Button</li>
+            <li>Independence Day</li>
+            <li>Rogue One</li>
+            <li>Star Wars: The Empire Strikes Back</li>
+            <li>The Mask of Zorro</li>
+            <li>Disney's Tarzan</li>
+            <li>The Prince of Egypt</li>
+            <li>Dune</li>
+            <li>Children of Men</li>
+            <li>Blood In Blood Out</li>
+        </ol>
       </main>
     
 </body>
