--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>Pierce College - Associate of Arts</li>
             <li>Commercial Driver School - Class A CDL</li>
         </ul></p>
-        <p><b>Work Experience</b></p>
+        <p class=""work><b>Work Experience</b></p>
         <p><ul>
             <li>Bering Sea Fisherman</li>
             <li>Truck Driver</li>
